--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./main.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -12,8 +13,8 @@
      <ul></ul>
      <button id="remove">remove all</button><br><br><br>
     </div>
-    <label for="Title">Title:</label><input type="text" placeholder="Title" required><br><br>
-    <label for="Author">Author:</label><input type="text" placeholder="Author" required><br><br>
-    <button>add</button><br><br>
+    <label for="Title">Title:</label><input type="text" id="title" placeholder="Title" required><br><br>
+    <label for="Author">Author:</label><input type="text" id="author" placeholder="Author" required><br><br>
+    <button id="add">add</button><br><br>
 </body>
 </html>
