--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Awesome Books</h1>
-    <input type="text" placeholder="Title"><br><br>
-    <input type="text" placeholder="Author"><br><br>
+    <div id="books">
+     <h1>Awesome Books</h1>
+     <ul></ul>
+     <button id="remove">remove all</button><br><br><br>
+    </div>
+    <label for="Title">Title:</label><input type="text" placeholder="Title" required><br><br>
+    <label for="Author">Author:</label><input type="text" placeholder="Author" required><br><br>
     <button>add</button><br><br>
 </body>
 </html>
