Fix linter errors

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     </div>
     <label for="Title">Title:</label><input type="text" id="title" placeholder="Title" required><br><br>
     <label for="Author">Author:</label><input type="text" id="author" placeholder="Author" required><br><br>
-    <button id="add">add</button><br><br>
+    <button id="add" type="submit">add</button><br><br>
 </body>
 </html>
