--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
     <script src="./main.js" defer></script>
     <title>Document</title>
 </head>
+
 <body>
     <div id="books">
-     <h1>Awesome Books</h1>
+     <h1>All Awesome Books</h1>
+     <div class="add-book">
      <ul></ul>
-     <button id="remove">remove all</button><br><br><br>
+     <!-- <button id="remove">remove all</button><br><br><br> -->
+     </div>
+     <hr>
     </div>
-    <label for="Title">Title:</label><input type="text" id="title" placeholder="Title" required><br><br>
-    <label for="Author">Author:</label><input type="text" id="author" placeholder="Author" required><br><br>
-    <button id="add" type="submit">add</button><br><br>
+    <h2>Add a new Book</h2>
+    <label for="Title"></label><input type="text" id="title" placeholder="Title" required><br><br>
+    <label for="Author"></label><input type="text" id="author" placeholder="Author" required><br><br>
+    <button id="add" type="submit">Add</button><br><br>
+
 </body>
 </html>
