--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 </head>
 
 <body>
+    <nav class="header">
+        <div class="menu">
+            <h3>Awesome Books</h3>
+            <ul id="menu-list">
+                <li>List</li>
+                <li>Add new</li>
+                <li>Contact</li>
+            </ul>
+
+        </div>
+    </nav>
     <div id="books">
      <h1>All Awesome Books</h1>
      <div class="add-book">
