--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <ul>
       <li><p>Email : beykmail@gmail.com</p></li>
       <li><p>GitHub : https://github.com/Beyk </p></li>
+      <li><p>GitHub : https://github.com/Jessekay</p></li>
     </ul>
   </div>
 </section>
