--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
   </div>
 </section>
   <footer id="footer">
+    <p id="time"></p>
     <p>Copyright <i class="fa fa-copyright" aria-hidden="true"></i></p>
   </footer>
   <script type="module" src="./index.js"></script>
+  <script src="https://moment.github.io/luxon/global/luxon.js"></script>
   <script src="https://moment.github.io/luxon/global/luxon.js"></script>
   </body>
 </html>
